# fastEpub

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.config.js  task.md
assets/: mystyle.css  style.css
src/: main.rs
src/components/: epub_loader.rs  epub_reader.rs  header.rs  html_processor.rs  library.rs  menu.rs  mod.rs  storage.rs  toc.rs
