[package]
name = "smart_reader"
version = "0.1.0"
authors = ["haowg <haoweiguoyouxiang@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["desktop"] }
epub = "2.1.2"
rfd = "0.15.2"
base64 = "0.22.1"  # 确保使用兼容的版本
regex = "1.10"   # 确保使用兼容的版本
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
dirs = "5.0.1"
chrono = { version = "0.4", features = ["serde"] }
async-std = "1.12"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
